syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "organization.proto";

package user;

option csharp_namespace = "JB.gRPC.User";

service UserRPC {
  rpc Get (UserRequest) returns (UserResponse);
}

message UserRequest {
	repeated int32 id = 1;
}

message UserResponse {
	repeated User users = 1;
}

message User {
	google.protobuf.Timestamp createdDate = 1;
	google.protobuf.Timestamp updatedDate = 2;
	string authSource = 3;
	int32 roleId = 4;
	bool isLockedOut = 5;
	string passwordPlain = 6;
	string name = 7;
	string avatarUrl = 8;
	google.protobuf.Int32Value organizationId = 9;
	organization.Organization organization = 10;
	google.protobuf.Int32Value defaultCVId = 11;
	string phoneNumber = 12;
	bool emailConfirmed = 13;
	string email = 14;
	string userName = 15;
	int32 id = 16;
}